[package]
name = "async-compatibility-layer"
description = "an abstraction layer for using both async-std and tokio"
version = "1.0.0"
edition = "2021"

[features]

# async_std
full-ci = ["async-std-executor", "logging-utils", "channel-async-std"]

tokio-ci = ["tokio-executor", "logging-utils", "channel-tokio"]
async-std-executor = ["dep:async-std"]
tokio-executor = ["dep:tokio", "dep:tokio-stream", "dep:console-subscriber"]
channel-flume = ["flume"]
channel-tokio = ["dep:tokio", "dep:tokio-stream"]
channel-async-std = ["dep:async-channel"]
profiling = [
    "opentelemetry-jaeger",
    "tracing-opentelemetry",
    "opentelemetry",
    "logging-utils",
    "opentelemetry-aws",
]
logging-utils = ["tracing-subscriber"]


[dependencies]
async-lock = "2.7"
async-std = { version = "1.12", features = [
    "attributes",
    "unstable",
], optional = true }
async-channel = { version = "1.8.0", optional = true }
async-trait = "0.1.68"
color-eyre = "0.6.2"
flume = { version = "0.10.14", optional = true }
futures = "0.3.28"
tokio = { version = "1", optional = true, features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "tracing",
] }
tokio-stream = { version = "0.1.14", optional = true }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "json",
], optional = true }
console-subscriber = { version = "0.1.8", optional = true }
opentelemetry = { version = "0.19.0", features = [
    "rt-tokio-current-thread",
    "metrics",
], optional = true }
tracing-opentelemetry = { version = "0.19.0", optional = true }
opentelemetry-jaeger = { version = "0.17.0", features = [
    "full",
    "rt-tokio-current-thread",
], optional = true }
opentelemetry-aws = { version = "0.7.0", features = ["trace"], optional = true }
