[package]
name = "async-compatibility-layer"
description = "an abstraction layer for using both async-std and tokio"
version = "1.0.0"
edition = "2021"

[features]

# async_std
profiling = [
    "opentelemetry-jaeger",
    "tracing-opentelemetry",
    "opentelemetry",
    "logging-utils",
    "opentelemetry-aws",
]
logging-utils = ["tracing-subscriber"]


[dependencies]
async-lock = "2.8"
async-trait = "0.1.73"
color-eyre = "0.6.2"
futures = "0.3.28"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "json",
], optional = true }
opentelemetry = { version = "0.20.0", features = [
    "rt-tokio-current-thread",
    "metrics",
], optional = true }
tracing-opentelemetry = { version = "0.21.0", optional = true }
opentelemetry-jaeger = { version = "0.19.0", features = [
    "full",
    "rt-tokio-current-thread",
], optional = true }
opentelemetry-aws = { version = "0.8.0", features = ["trace"], optional = true }

[target.'cfg(all(async_executor_impl = "tokio"))'.dependencies]
console-subscriber = { version = "0.2.0" }
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "tracing",
] }
tokio-stream = { version = "0.1.14" }

[target.'cfg(all(async_executor_impl = "async-std"))'.dependencies]
async-std = { version = "1.12", features = [
    "attributes",
    "unstable",
]}

[target.'cfg(all(async_channel_impl = "tokio"))'.dependencies]
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "tracing",
] }
tokio-stream = { version = "0.1.14" }

[target.'cfg(all(async_channel_impl = "async-std"))'.dependencies]
async-channel = { version = "1.9.0" }

[target.'cfg(all(async_channel_impl = "flume"))'.dependencies]
flume = { version = "0.11.0" }
