[package]
name = "async-compatibility-layer"
description = "an abstraction layer for using both async-std and tokio"
authors = ["Espresso Systems <hello@espressosys.com>"]
version = "1.2.1"
edition = "2021"
license = "MIT"

[features]

# async_std
profiling = [
    "opentelemetry-jaeger",
    "tracing-opentelemetry",
    "opentelemetry",
    "logging-utils",
    "opentelemetry-aws",
]
logging-utils = ["tracing-subscriber"]


[dependencies]
async-lock = "3.3"
async-trait = "0.1.79"
color-eyre = "0.6.2"
futures = "0.3.28"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "json",
], optional = true }
opentelemetry = { version = "0.20.0", features = [
    "rt-tokio-current-thread",
    "metrics",
], optional = true }
tracing-opentelemetry = { version = "0.24.0", optional = true }
opentelemetry-jaeger = { version = "0.19.0", features = [
    "full",
    "rt-tokio-current-thread",
], optional = true }
opentelemetry-aws = { version = "0.8.0", features = ["trace"], optional = true }

[target.'cfg(async_executor_impl = "tokio")'.dependencies]
console-subscriber = { version = "0.2.0" }
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "tracing",
] }
tokio-stream = { version = "0.1.14" }

[target.'cfg(not(async_executor_impl = "tokio"))'.dependencies]
async-std = { version = "1.12", features = [
    "attributes",
    "unstable",
]}

[target.'cfg(async_channel_impl = "tokio")'.dependencies]
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "tracing",
] }
tokio-stream = { version = "0.1.14" }

[target.'cfg(not(any(async_channel_impl = "tokio", async_channel_impl = "flume")))'.dependencies]
async-std = { version = "1.12", features = [
    "attributes",
    "unstable",
]}

[target.'cfg(all(async_channel_impl = "flume"))'.dependencies]
flume = { version = "0.11.0" }
